fix for sidebar z-index

--- a/workbench/devincludes/scss/contentbox.scss
+++ b/workbench/devincludes/scss/contentbox.scss
@@ -68,10 +68,6 @@ a.btn.btn-danger:visited {
 #simple-container{
 	padding-top:10px;
 }
-/** SideBar Overrides */
-.sidebar{
-	z-index: 0;
-}
 /** Sidebar Mini */
 .sidebar-mini > .sidebar > #profileSidebar{
 	display: none;
